--- a/styles.css
+++ b/styles.css
@@ -299,18 +299,7 @@ a:hover {
 }
 
 .hero-bg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-image: url('assets/site-bg.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    opacity: 0.3;
-    z-index: 0;
-    animation: bgZoom 20s ease-in-out infinite;
+    display: none;
 }
 
 @keyframes bgZoom {
